remove jruby options