@@ -1,5 +1,5 @@
 #!/bin/bash
 cd /srv
-export JRUBY_OPTS=--server -J-Xms2048m -J-Xmx2048m -J-XX:+UseConcMarkSweepGC -J-XX:-UseGCOverheadLimit -J-XX:+CMSClassUnloadingEnabled
+export JRUBY_OPTS=--server 
 puma -C ./config/puma.rb
 nginx
